# AxiomAI

./: .gitignore  AGENTS.md  Dockerfile  IDEA.md  LICENSE  PRD.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.agents/skills/AxiomAI/: SKILL.md
.claude/: ecc-tools.json  identity.json
.codex/: AGENTS.md
.github/workflows/: ci.yml
apps/case-studies/01-msp-network/: README.md  demo.py
apps/case-studies/02-soc2-compliance/: README.md  demo.py
apps/case-studies/03-ai-support-governance/: README.md  demo.py
apps/case-studies/04-healthcare-prior-auth/: README.md  demo.py
apps/case-studies/05-ai-code-review/: README.md  demo.py
apps/case-studies/06-procurement-agent/: README.md  demo.py
apps/case-studies/07-cybersecurity/: README.md  demo.py
apps/case-studies/08-contract-analysis/: README.md  demo.py
apps/case-studies/09-insurance-claims/: README.md  demo.py
apps/case-studies/10-banking-loan/: README.md  demo.py
apps/case-studies/11-hr-policy/: README.md  demo.py
apps/case-studies/12-data-governance/: README.md  demo.py
apps/case-studies/13-cloud-cost/: README.md  demo.py
apps/case-studies/14-manufacturing-qc/: README.md  demo.py
apps/case-studies/15-education-degree/: README.md  demo.py
apps/case-studies/16-immigration/: README.md  demo.py
apps/case-studies/17-sales-qualification/: README.md  demo.py
apps/case-studies/18-agentic-trading/: README.md  demo.py
apps/case-studies/_base/: run_cli_demo.py
apps/case_studies/: __init__.py  registry.py
apps/case_studies/_base/: __init__.py  case_runner.py  demo_refund_governance.py  demo_runner.py  report_formatter.py  scenario_loader.py  scope_matcher.py  simple_engine.py
apps/case_studies/cs01_msp_network/: engine.py
apps/case_studies/cs02_soc2/: __init__.py  controls.py  engine.py  report.py
apps/case_studies/cs03_support_governance/: __init__.py  engine.py  report.py
apps/case_studies/cs04_healthcare/: engine.py
apps/case_studies/cs05_code_review/: engine.py
apps/case_studies/cs06_procurement/: engine.py
apps/case_studies/cs07_cybersecurity/: __init__.py  engine.py  report.py  rules.py
apps/case_studies/cs08_contract/: engine.py
apps/case_studies/cs09_insurance/: engine.py
apps/case_studies/cs10_banking/: engine.py
apps/case_studies/cs11_hr_policy/: engine.py
apps/case_studies/cs12_data_governance/: engine.py
apps/case_studies/cs13_cloud_cost/: engine.py
apps/case_studies/cs14_manufacturing/: engine.py
apps/case_studies/cs15_education/: engine.py
apps/case_studies/cs16_immigration/: engine.py
apps/case_studies/cs17_sales/: engine.py
apps/case_studies/cs18_trading/: engine.py
apps/case_studies/data/: cs-01.json  cs-02.json  cs-03.json  cs-04.json  cs-05.json  cs-06.json  cs-07.json  cs-08.json  cs-09.json  cs-10.json  cs-11.json  cs-12.json  cs-13.json  cs-14.json  cs-15.json  cs-16.json  cs-17.json  cs-18.json
apps/console/: README.md  api_client.py  app.py
apps/console/components/: ui.py
apps/console/pages/: 1_Case_Study_Gallery.py  1_Knowledge_Base.py  2_Brainstorming.py  2_Case_Studies.py  3_Feature_Guides.py  3_Governance.py  4_Audit_Trail.py  4_Knowledge_Base.py  6_Audit_Trail.py
apps/desktop-tauri/: README.md
apps/desktop-tauri/src/: index.html  main.js  styles.css
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-tauri/src-tauri/src/: main.rs
axiomai/: __init__.py  api.py  backward_chain.py  constraints.py  contradiction.py  engine.py  facts.py  forward_chain.py  proof_trace.py  rules.py  unification.py
axiomai/connectors/: __init__.py  base.py  file.py  mocks.py  webhook.py
axiomai/governance/: __init__.py  audit.py  engine.py  escalation.py  middleware.py  policy.py  registry.py
axiomai/governance/policies/: cloud-cost-policy.yaml  data-access-policy.yaml  procurement-policy.yaml  refund-policy.yaml
axiomai/reasoner/: __init__.py  cli.py  engine.py
axiomai/reasoner/api/: audit_store.py  case_study_service.py  main.py  routes_app.py  routes_connectors.py
axiomai/reasoner/core/: __init__.py  cnf.py  models.py  ordering.py  parser.py  substitution.py  unification.py
axiomai/reasoner/engines/: __init__.py  backward.py  causal.py  constraints.py  forward.py  planner.py  resolution.py
axiomai/reasoner/explain/: __init__.py  narrator.py  proof.py
axiomai/reasoner/integrations/: __init__.py  llm_client.py  llm_extractor.py  z3_adapter.py
axiomai/reasoner/kb/: __init__.py  persistence.py  schema.py  store.py
docs/: API.md  DEPLOYMENT.md  IMPLEMENTATION-TRACKER.md  PROJECT-MODULES.md  QUICKSTART.md  README.md
docs/business/: MASTER-BUSINESS-STRATEGY.md
docs/case-studies/01-msp-network/: README.md
docs/case-studies/02-soc2-compliance/: README.md
docs/case-studies/03-ai-support-governance/: README.md
docs/case-studies/04-healthcare-prior-auth/: README.md
docs/case-studies/05-ai-code-review/: README.md
docs/case-studies/06-procurement-agent/: README.md
docs/case-studies/07-cybersecurity-root-cause/: README.md
docs/case-studies/08-contract-analysis/: README.md
docs/case-studies/09-insurance-claims/: README.md
docs/guides/: FEATURES.md
examples/: medical_diagnosis.py  scheduling.py  socrates.py
tests/: conftest.py  test_api.py  test_api_p5.py  test_axiomai.py  test_backward.py  test_case_study_base.py  test_causal.py  test_cnf.py  test_connectors.py  test_constraints.py  test_cs02_soc2.py  test_cs03_support_governance.py  test_cs07_cybersecurity.py  test_determinism.py  test_engine_p1.py  test_forward.py  test_governance.py  test_governance_middleware.py  test_kb_p1.py  test_llm_extractor.py  test_models.py  test_narrator.py  test_p6_case_studies.py  test_parser_p1.py  test_persistence.py  test_persistence_full.py  test_planner.py  test_platform_complete.py  test_resolution.py  test_resolution_full.py  test_unification.py  test_unification_property.py
(+45 files in other folders)
