[package]
name = "axiomai-desktop-demo"
version = "0.1.0"
description = "AxiomAI desktop demo app"
authors = ["AxiomAI Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.6", features = ["shell-open"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
